Setup NextJS, TypeScript, ESLint, Husky, Prettier, React and ReactDOM

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Nakshatra Mukhopadhyay's personal website.",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint *.{ts,tsx}",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -22,5 +25,29 @@
   "bugs": {
     "url": "https://github.com/n0x3u5/website/issues"
   },
-  "homepage": "https://github.com/n0x3u5/website#readme"
+  "homepage": "https://github.com/n0x3u5/website#readme",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "pre-push": "npm test"
+    }
+  },
+  "dependencies": {
+    "next": "^9.3.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.31",
+    "@types/react": "^16.9.25",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "husky": "^4.2.3",
+    "prettier": "^2.0.2",
+    "typescript": "^3.8.3"
+  }
 }
